--- a/.github/workflows/DockerAction.yml
+++ b/.github/workflows/DockerAction.yml
@@ -12,7 +12,7 @@ jobs:
       uses: docker/login-action@v2
       with:
         username: Ovak
-        password: 21021991ovak!
+        password: dckr_pat_pqGT3pK6McmC-fMJUFyEENov3BQ
     - name: Build and push Docker image
       uses: docker/build-push-action@v3.2.0
       with:
