--- a/.github/workflows/DockerAction.yml
+++ b/.github/workflows/DockerAction.yml
@@ -11,8 +11,8 @@ jobs:
     - name: Log in dockerhub
       uses: docker/login-action@v2
       with:
-        username: Ovak
-        password: dckr_pat_pqGT3pK6McmC-fMJUFyEENov3BQ
+        username: ${{ secrets.SEKRET_DOCKER_LOGIN }}
+        password: ${{ secrets.SEKRET_DOCKER_PASS }}
     - name: Build and push Docker image
       uses: docker/build-push-action@v3.2.0
       with:
