--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,7 +2,6 @@ name: Docker Image CI
 
 on:
   pull_request:
-    types: [opened]
     branches:
     - master
 
@@ -15,4 +14,4 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:${{ github.event.pull_request.title }}
+      run: docker build . --file Dockerfile --tag my-image-name:${{ 'github.event.pull_request.title' }}
