--- a/.github/workflows/AAAA.yml
+++ b/.github/workflows/AAAA.yml
@@ -14,4 +14,4 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag $GITHUB_HEAD_REF
+      run: docker build . --file Dockerfile --tag $GITHUB_HEAD_REF:${{github.event.issue.number}}
