--- a/.github/workflows/DockerMetadataAction.yml
+++ b/.github/workflows/DockerMetadataAction.yml
@@ -48,6 +48,6 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          push: ${{ github.event_name != 'pull_request' }}
+          push: ${{ github.event_name = 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
