--- a/.github/workflows/Create Release.yml
+++ b/.github/workflows/Create Release.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Release Tag
         uses: igorrs/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ needs.get-release-tag.outputs.release-version }}
           release_name: ${{ needs.get-release-tag.outputs.release-version }}
