--- a/.github/workflows/OficialDockerWorkflow.yml
+++ b/.github/workflows/OficialDockerWorkflow.yml
@@ -26,4 +26,4 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/flask_app:version${{ env.GITHUB_RUN_NUMBER }}
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/flask_app:version$GITHUB_RUN_NUMBER
