--- a/.github/workflows/OficialDockerWorkflow.yml
+++ b/.github/workflows/OficialDockerWorkflow.yml
@@ -2,9 +2,6 @@ name: OficialDockerWorkflow
 
 on:
   workflow_dispatch:
-
-env:
-  TAG: $GITHUB_REF_NAME
   
 jobs:
   build:
@@ -29,4 +26,4 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/flask_app:version${{ env.TAG }}
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/flask_app:${{ env.GITHUB_RUN_NUMBER }}
