--- a/.github/workflows/OficialDockerWorkflow.yml
+++ b/.github/workflows/OficialDockerWorkflow.yml
@@ -21,7 +21,7 @@ jobs:
         uses: docker/setup-buildx-action@v2
       -
         name: debug
-        run: echo ${{ env.GITHUB_RUN_NUMBER }}
+        run: echo $GITHUB_RUN_NUMBER
       -
         name: Build and push
         uses: docker/build-push-action@v4
