--- a/.github/workflows/OficialDockerWorkflow.yml
+++ b/.github/workflows/OficialDockerWorkflow.yml
@@ -3,7 +3,7 @@ name: OficialDockerWorkflow
 on:
   workflow_dispatch:
 env:
-  TAG: $GITHUB_RUN_NUMBER
+  TAG: ${GITHUB_RUN_NUMBER}
   
 jobs:
   build:
