--- a/.github/workflows/OficialDockerWorkflow.yml
+++ b/.github/workflows/OficialDockerWorkflow.yml
@@ -29,4 +29,4 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/flask_app:${{ env.GITHUB_SHA }}
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/flask_app:${{ env.GITHUB_REPOSITORY }}
